--- a/Validation.ipynb
+++ b/Validation.ipynb
@@ -64,7 +64,7 @@
     "DATA_DIR = \".\"\n",
     "WCCT_PATH = os.path.join(DATA_DIR, \"WCCT_data.csv\")\n",
     "VXA_PATH  = os.path.join(DATA_DIR, \"VXA_data.csv\")\n",
-    "MCL_PATH  = os.path.join(DATA_DIR, \"matched_populations.xlsx\")"
+    "MCL_PATH  = os.path.join(DATA_DIR, \"matched_populations.csv\")"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "source": [
     "wcct = pd.read_csv(WCCT_PATH)\n",
     "vxa  = pd.read_csv(VXA_PATH)\n",
-    "mcl  = pd.read_excel(MCL_PATH)\n",
+    "mcl  = pd.read_csv(MCL_PATH)\n",
     "wcct[\"DAY_REAL\"] = pd.to_numeric(wcct[\"DPC\"], errors=\"coerce\")\n",
     "vxa[\"DAY_REAL\"]  = pd.to_numeric(vxa[\"DPC\"], errors=\"coerce\")"
    ]
