--- a/uMAP_StudyA.ipynb
+++ b/uMAP_StudyA.ipynb
@@ -113,10 +113,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "240a5277-ebfd-4e83-9f38-ec2762be6f41",
+   "id": "38d5e6e4-ddd2-4441-8702-d61f91befc60",
    "metadata": {},
    "source": [
-    "### Supervised uMAP"
+    "### uMAP"
    ]
   },
   {
