--- a/uMAP_StudyB.ipynb
+++ b/uMAP_StudyB.ipynb
@@ -80,7 +80,7 @@
     "DATA_DIR = \".\"\n",
     "WCCT_PATH = os.path.join(DATA_DIR, \"WCCT_normalized_BL2.csv\")\n",
     "VXA_PATH  = os.path.join(DATA_DIR, \"VXA_normalized_BL2.csv\")\n",
-    "MCL_PATH = os.path.join(DATA_DIR, \"matched_populations.xlsx\")\n",
+    "MCL_PATH = os.path.join(DATA_DIR, \"matched_populations.csv\")\n",
     "if not os.path.exists(WCCT_PATH):\n",
     "    raise FileNotFoundError(WCCT_PATH)\n",
     "if not os.path.exists(VXA_PATH):\n",
@@ -90,7 +90,7 @@
     "\n",
     "wcct = pd.read_csv(WCCT_PATH)\n",
     "vxa  = pd.read_csv(VXA_PATH)\n",
-    "mcl  = pd.read_excel(MCL_PATH)"
+    "mcl  = pd.read_csv(MCL_PATH)"
    ]
   },
   {
@@ -278,10 +278,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee71945-f5db-4ff2-8327-f4f324ec03d0",
+   "id": "a194ded3-cf03-4bda-b1c2-4ace34c43d80",
    "metadata": {},
    "source": [
-    "### Supervised uMAP"
+    "### uMAP"
    ]
   },
   {
